# openrelik-workers

./: .gitignore  README.md  pyproject.toml
.github/: repos-log2timeline-staging.yaml  repos-uv.yaml
.github/workflows/: api-docs-publish-lib-common.yml  api-docs-publish.yml  combine-dependabot-prs.yaml  docker-image-build-log2timeline-staging.yaml  docker-image-build-release.yaml  docker-image-build.yaml  publish-pypi-common.yaml  publish-pypi.yml  python-test-lib-common.yaml  python-test-uv.yaml  update-uv-and-run-tests.yaml  update-uv-workers.yaml
lib/: README.md  pyproject.toml
lib/openrelik_worker_common/: file_utils.py  mount_utils.py  task_utils.py
lib/tests/: test_archive_utils.py  test_file_utils.py  test_mount_utils.py  test_password_utils.py
openrelik_worker_common/: archive_utils.py  file_utils.py
plaso/src/: log2timeline.py  psort.py
plaso/tests/: test_psort.py
src/: log2timeline.py
tests/: test_archive_utils.py  test_file_utils.py  test_mount_utils.py  test_task_utils.py
workers/analyzer-config/tests/: test_redis_analyzer.py
workers/analyzer-logs/: pyproject.toml
workers/analyzer-logs/src/: ssh_analyzer.py
workers/analyzer-logs/tests/: conftest.py  test_auth_log_analyzer.py  test_tasks.py
workers/bulkextractor/: pyproject.toml
workers/bulkextractor/src/: app.py  tasks.py
workers/bulkextractor/tests/: test_tasks.py
workers/chromecreds/: pyproject.toml
workers/chromecreds/src/: app.py  tasks.py
workers/chromecreds/tests/: test_chromecreds.py
workers/containers/: setup.sh
workers/containers/src/: container_export.py
workers/duckdb/: pyproject.toml
workers/duckdb/src/: app.py  tasks.py
workers/entropy/tests/: test_tasks.py
workers/exif/: pyproject.toml
workers/exif/src/: app.py  tasks.py
workers/extraction/: Dockerfile  README.md
workers/extraction/src/: archives.py  extractfiles.py  image_export.py
workers/extraction/tests/: test_archives.py  test_extractfiles.py  test_image_export.py
workers/grep/: Dockerfile  README.md  pyproject.toml
workers/grep/src/: app.py  task_grep.py  task_ugrep.py
workers/grep/tests/: test_ugrep.py
workers/hasher/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
workers/hasher/src/: app.py  tasks.py
workers/openrelik-worker-extraction/src/: app.py  archives.py
workers/openrelik-worker-timesketch/src/: tasks.py
workers/openrelik-worker-timesketch/tests/: test_tasks.py
workers/photorec/: openrelik.yaml  pyproject.toml
workers/photorec/src/: tasks.py
workers/photorec/tests/: test_tasks.py
workers/plaso/tests/: test_log2timeline.py
workers/strings/src/: tasks.py
workers/strings/tests/: test_tasks.py
workers/timesketch/: pyproject.toml
workers/timesketch/src/: app.py  tasks.py
(+6 files in other folders)
