[project]
name = "openrelik-worker-common"
version = "0.17.5"
description = "Common utilities for OpenRelik workers"
authors = [
    {name = "Johan Berggren", email = "jberggren@gmail.com"},
    {name = "hacktobeer", email = "ramsesdebeer@gmail.com"},
    {name = "Fry", email = "fryx0r@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.6,<2.0.0",
    "redis>=5.2.1,<6.0.0",
    "structlog>=25.4.0,<26.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "fakeredis[lua]>=2.28.1,<3.0.0",
    "pytest-structlog>=1.1,<2.0",
    "freezegun>=1.5.2,<2.0.0",
]
docs = [
    "pdoc3>=0.11.6,<0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
