[project]
name = "openrelik-worker-grep"
version = "0.3.0"
description = "Search for patterns in files"
authors = [
    {name = "Thomas", email = "tomchop@google.com"},
    {name = "Slobodan", email = "spop@google.com"}
]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
    "openrelik-common>=0.7.5",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = ["pytest", "pytest-cov>=5.0.0,<6", "pytest-mock>=3.14.0,<4"]

[tool.uv]
package = false
default-groups = ["test"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
