[project]
name = "openrelik-worker-hasher"
version = "0.1.0"
description = "OpenRelik worker to calculate various hashes for files."
readme = "README.md"
authors = [
    { name = "Alexander Jaeger", email = "mail@alexanderjaeger.de" }
]
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.4.0",
    "openrelik-worker-common>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false

